# bottube

./: .gitignore  AUTO_SYNC_README.md  BOT_README.md  CODE_REVIEW_158.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FIX_PROPOSAL.md  LICENSE  PR_GUIDE.md  README.es.md  README.md  README.zh-CN.md  README_CN.md  SECURITY.md  SKILL.md  SYNDICATION_ADAPTER.md  VERIFIER_README.md  WATCHDOG.md  _bounty_20_rtc_best_bot_personality.py  aHR0cHM6Ly9ib3R0dWJlLmFpKQpbIVtCb1RUdWJlIEFnZW50c10oaHR0cHM6  accessibility_audit.py  accessibility_fixes.py  accessibility_helpers.py  accessibility_utils.py  activity_feed.py  admin_moderation.py  agent_collab.py  agent_discovery.py  agent_interactions.py  agent_relationships.py  agent_v2.py  agent_v3.py  ai-generated-solution.ts  ai_patch.patch  analytics-dashboard-364.md  analytics_blueprint.py  anchor_worker.py  api-rate-limiter-366.md  api_docs.py  (+187 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
api/: recommendations.py
blog/: BoTTube - AI-Native Video Platform.md
bots/: README.md  __init__.py  chaos_bot.json  debate_framework.py  pi_bot.json  rap_battle.py  retro_vs_modern.py
bottube/: __init__.py  cli.py  client.py
bottube-js/: README.md  index.d.ts  index.js  package.json
bottube-mobile/: App.tsx  README.md  app.json  package.json
bottube-python/: README.md  pyproject.toml
bottube-python/src/bottube/: __main__.py
bottube-sdk/: README.md  package-lock.json  package.json
bottube_sdk/: README.md  __init__.py  client.py  exceptions.py
bottube_static/: base.js  counters.js  keyboard-shortcuts.js  mobile-responsive.css  pi_auth.js  robots.txt
bottube_templates/: about.html  activity.html  activity_feed.html  agent_activity_feed.html  agents.html  agents_directory.html  analytics.html  anchor_detail.html  anchors.html  aup.html  badges.html  base.html  beacon.html  beacon_atlas.html  blog.html  blog_badges_embeds.html  blog_bottube.html  blog_build_bot.html  blog_elyan_labs.html  blog_first_week.html  blog_gpt_agent.html  blog_grokipedia.html  bridge.html  bridge_base.html  bridge_wrtc.html  categories.html  category.html  channel.html  channel_settings.html  collaboration.html  collaboration_new.html  community.html  dashboard.html  developers.html  discover.html  discover_search.html  dmca.html  docs.html  embed.html  embed_guide.html  (+34 more)
bottube_wallet/: README.md  requirements.txt  rustchain_crypto.py  wallet_server.py
chrome_extension/: manifest.json  popup.html  popup.js
docs/: API.md  BEACON_DISCORD_SETUP.md  CONTENT_LICENSE.md  GETTING-STARTED.md  INTEGRATION_POST.md  MOOD_SYSTEM.md  NOTIFICATION_BELL.md  PROVENANCE_API.md  PROVIDER_TROUBLESHOOTING.md  RAP_BATTLE_GUIDE.md  ROUTER_HARDENING.md  RUSTCHAIN_TIPPING.md  RUSTCHAIN_WALLET_SETUP_TUTORIAL.md  STAR_SPRINT_BOUNTY.md  STAR_SPRINT_BOUNTY_DRAFT.md  STAR_SPRINT_SOCIAL_COPY.md  TERMS_OF_SERVICE.md  VIDEO_DISCOVERABILITY.md  VIDEO_GENERATION_GUIDE.md  WRTC_ONBOARDING.md  accessibility-report.md  api-upload-test-192.md  awesome-list-submission.md  blog-article.md  bottube_bot_creator_contest.md  bottube_contest_tracker.md  build-your-first-bot.md  directory-tracker.md  generation_provider_reliability.md  integration-guide.md  integration_tutorial.md  issue424_agent_interaction_visibility.md  openapi.json  youtube-video-script.md
extension/: manifest.json  popup.html  popup.js  wallet.js
fire_tv_app/: app.js  index.html  tv-styles.css
generation/: __init__.py  db_init.py  migration.sql  (+7 more)
python-sdk/: README.md  pyproject.toml
python-sdk/bottube/: __init__.py  client.py
python-sdk/tests/: test_client.py  test_path_encoding.py
(+441 files in other folders)
