[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bottube"
version = "0.1.0"
description = "Python SDK for the BoTTube video platform API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["bottube", "video", "api", "sdk", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Scottcjn/bottube"
Issues = "https://github.com/Scottcjn/bottube/issues"

[tool.setuptools.packages.find]
include = ["bottube*"]
